--- a/frontend/html/edit_profile.html
+++ b/frontend/html/edit_profile.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit Profile</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/general_styles.css">
 </head>
 
@@ -47,8 +48,24 @@
 		</div>
 	</nav>
     <div class="form-container container">
-        <h2 class="text-center mb-4">Edit Profile</h2>
+        <h2 class="text-center mb-4">Profile Information</h2>
         <form id="editProfileForm">
+            <div class="mb-3">
+                <label for="prolific_id" class="form-label">
+                    Prolific ID
+                    <button 
+                        type="button" 
+                        class="btn btn-link p-0 ms-2" 
+                        data-bs-toggle="popover" 
+                        data-bs-trigger="hover focus" 
+                        data-bs-content="If you are registering as a part of Prolific study, enter your Prolific ID here. Otherwise you can leave this field empty."
+                        data-bs-placement="right" 
+                        aria-label="Info">
+                        <i class="bi bi-info-circle"></i>
+                    </button>
+                </label>
+                <input type="text" class="form-control" id="prolific_id" placeholder="Enter your Prolific ID">
+            </div>
             <div class="mb-3">
                 <label for="nationality" class="form-label">Nationality</label>
                 <input type="text" class="form-control" id="nationality" placeholder="Enter your nationality">
@@ -77,9 +94,12 @@
         </form>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../scripts/scripts.js"></script>
     <script>
         window.addEventListener("load", function() {
+            const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]');
+            const popoverList = [...popoverTriggerList].map(popoverTriggerEl => new bootstrap.Popover(popoverTriggerEl));
             getProfile('edit page');
             getMessages();
         });
