--- a/frontend/html/mydata.html
+++ b/frontend/html/mydata.html
@@ -129,6 +129,7 @@
 		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
 		crossorigin="anonymous"></script>
     <script src="../scripts/scripts.js"></script>
+    <script src="../scripts/fitbit_scripts.js"></script>
 </body>
 
 </html>
