--- a/frontend/html/mydata.html
+++ b/frontend/html/mydata.html
@@ -52,8 +52,8 @@
 	<main class="d-flex flex-nowrap">
 		<div class="flex-shrink-0 p-3 bg-white" style="width: 280px;">
 			<ul class="list-unstyled ps-0">
-				<li id="connect-button-container" class="mb-1">
-					<button class="btn btn-outline-info d-inline-flex align-items-center rounded" onclick="getMyData('connect button');">
+				<li id="connect-button-container" class="mb-2">
+					<button id="connectToFitbitButton" class="btn btn-outline-info d-inline-flex align-items-center rounded">
 						<img src="https://www.vectorlogo.zone/logos/fitbit/fitbit-icon.svg" alt="Fitbit Logo" style="width: 20px; height: 20px; margin-right: 10px;">
 						Connect to Fitbit
 					</button>
@@ -129,12 +129,41 @@
 		window.addEventListener("load", function() {
             getMessages();
             getMyData('page load');
+
+			const connectButton = document.getElementById("connectToFitbitButton");
+			// When "Connect to Fitbit" is clicked, show the confirmation modal
+			connectButton.addEventListener("click", function () {
+				let confirmModal = new bootstrap.Modal(document.getElementById("confirmModal"));
+				confirmModal.show();
+			});
         });
 	</script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
 		crossorigin="anonymous"></script>
     <script src="../scripts/scripts.js"></script>
+
+	<!-- Confirmation Modal -->
+<div class="modal fade" id="confirmModal" tabindex="-1" aria-labelledby="confirmModalLabel" aria-hidden="true">
+	<div class="modal-dialog">
+	  <div class="modal-content">
+		<div class="modal-header">
+		  <h5 class="modal-title" id="confirmModalLabel">Connecting to Fitbit</h5>
+		  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+		</div>
+		<div class="modal-body">
+		  By clicking on "Continue", you will be redirected to the Fitbit's login page.
+		  After you log into your fitbit account, we'll get access to your <b>sleep</b>, <b>activity</b>, and <b>heart rate</b> data.
+		  In the end, you can close the page you've been redirected to, and <b>reload</b> this page to see your data.
+		</div>
+		<div class="modal-footer">
+		  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+		  <button type="button" class="btn btn-primary" id="confirmYesButton" onclick="getMyData('connect button');">Continue</button>
+		</div>
+	  </div>
+	</div>
+  </div>
+  
 </body>
 
 </html>
