--- a/frontend/html/study.html
+++ b/frontend/html/study.html
@@ -18,11 +18,11 @@
         </button>
         <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item">
+                <li class="nav-item" id="navbar-data">
                     <a class="nav-link" href="/mydata">My Data</a>
                 </li>
-                <li class="nav-item">
-                    <a id="mystudies-navbar" class="nav-link" href="/mystudies">My Studies</a>
+                <li class="nav-item" id="navbar-studies">
+                    <a class="nav-link" href="/mystudies">My Studies</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/explore">Explore</a>
@@ -35,7 +35,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/about_us">About Us</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" id="navbar-profile">
                     <a class="nav-link position-relative" href="/profile">
                         <img src="../images/profile.png" style="height: 30px;">
 						<span class="badge bg-danger badge-notification"></span>
@@ -66,6 +66,7 @@
     <script src="../scripts/scripts.js"></script>
     <script>
         window.onload = function() {
+            checkAuthorization();
             // TODO: study_id should be in the url path not as query parameter
             getStudy(getUrlParam('studyId'), 'study');
             getMessages();
