--- a/frontend/html/study.html
+++ b/frontend/html/study.html
@@ -22,7 +22,7 @@
                     <a class="nav-link" href="/mydata">My Data</a>
                 </li>
                 <li class="nav-item" id="navbar-studies">
-                    <a class="nav-link" href="/mystudies">My Studies</a>
+                    <a class="nav-link" href="/mystudies" id="mystudies-navbar">My Studies</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/explore">Explore</a>
