--- a/frontend/html/edit_study.html
+++ b/frontend/html/edit_study.html
@@ -68,6 +68,12 @@
                 <label for="consent-link" class="form-label">Link to the Consent Form</label>
                 <input type="url" class="form-control" id="consent-link" placeholder="Paste the link to the consent form here">
             </div>
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="participant-identifier-required">
+                <label class="form-check-label" for="participant-identifier-required">
+                    Participant Identifier Required
+                </label>
+            </div>
             <button type="submit" class="btn btn-primary btn-block mb-5">Submit</button>
         </form>
     </div>
